Reapply "Clean Code"
This reverts commit b4df039b1bd50ad31a5e500e381989477b8e7e0a.